@@ -1,7 +1,7 @@
 const TITLE = "Cyclone Simulator";
-const VERSION_NUMBER = "--DEV--";
+const VERSION_NUMBER = "20190823a";
 
-const SAVE_FORMAT = 3;  // Format #3 in use starting in TEST
+const SAVE_FORMAT = 3;  // Format #3 in use starting in v20190823a
 const EARLIEST_COMPATIBLE_FORMAT = 0;
 const ENVDATA_COMPATIBLE_FORMAT = 0;
 
